added tailwind and homepage info

--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MelsumnerWebsite</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Melanie Sumner</title>
+    <meta name="description" content="Chicago-based digital accessibility expert">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/melsumner-website.css">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
 
     {{content-for "head-footer"}}
   </head>
