--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
     {{content-for "head"}}
-
+    <link rel="shortcut icon" type="image/jpg" href="{{rootURL}}assets/images/favicon.png"/>
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/melsumner-website.css">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
