--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Melanie Sumner</title>
+    <title>Melanie Sumner - Digital Accessibility Leader</title>
     <meta name="description" content="Chicago-based digital accessibility expert">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
